--- a/static/projections/1/projections.json
+++ b/static/projections/1/projections.json
@@ -1649,7 +1649,7 @@
         "fum_lost": 0,
         "fantasy_points": 11.5
     },
-    "laviska shenault jr": {
+    "laviska shenault": {
         "passing_yds": 0,
         "passing_td": 0,
         "passing_int": 0,
@@ -1724,7 +1724,7 @@
         "fum_lost": 0,
         "fantasy_points": 11.07
     },
-    "michael pittman jr": {
+    "michael pittman": {
         "passing_yds": 0,
         "passing_td": 0,
         "passing_int": 0,
@@ -2084,7 +2084,7 @@
         "fum_lost": 0,
         "fantasy_points": 9.42
     },
-    "ronald jones ii": {
+    "ronald jones": {
         "passing_yds": 0,
         "passing_td": 0,
         "passing_int": 0,
@@ -2444,7 +2444,7 @@
         "fum_lost": 0,
         "fantasy_points": 7.93
     },
-    "henry ruggs iii": {
+    "henry ruggs": {
         "passing_yds": 0,
         "passing_td": 0,
         "passing_int": 0,
@@ -2489,7 +2489,7 @@
         "fum_lost": 0,
         "fantasy_points": 7.75
     },
-    "terrace marshall jr": {
+    "terrace marshall": {
         "passing_yds": 0,
         "passing_td": 0,
         "passing_int": 0,
@@ -3869,7 +3869,7 @@
         "fum_lost": 0,
         "fantasy_points": 3.37
     },
-    "benny snell jr": {
+    "benny snell": {
         "passing_yds": 0,
         "passing_td": 0,
         "passing_int": 0,
@@ -4274,21 +4274,6 @@
         "fum_lost": 0,
         "fantasy_points": 2.34
     },
-    "damarea crockett": {
-        "passing_yds": 0,
-        "passing_td": 0,
-        "passing_int": 0,
-        "rushing_yds": 10.58,
-        "rushing_td": 0.07,
-        "receiving_rec": 0.5,
-        "receiving_yds": 3.04,
-        "receiving_td": 0.01,
-        "ret_td": 0,
-        "misc_fumtd": 0,
-        "misc_2pt": 0,
-        "fum_lost": 0.01,
-        "fantasy_points": 2.32
-    },
     "kenneth gainwell": {
         "passing_yds": 0,
         "passing_td": 0,
@@ -4558,21 +4543,6 @@
         "misc_2pt": 0,
         "fum_lost": 0,
         "fantasy_points": 2.01
-    },
-    "ameer abdullah": {
-        "passing_yds": 0,
-        "passing_td": 0,
-        "passing_int": 0,
-        "rushing_yds": 7.86,
-        "rushing_td": 0.05,
-        "receiving_rec": 0.49,
-        "receiving_yds": 3.72,
-        "receiving_td": 0.01,
-        "ret_td": 0,
-        "misc_fumtd": 0,
-        "misc_2pt": 0,
-        "fum_lost": 0.01,
-        "fantasy_points": 1.99
     },
     "harrison bryant": {
         "passing_yds": 0,
@@ -5129,21 +5099,6 @@
         "fum_lost": 0.01,
         "fantasy_points": 1.24
     },
-    "brian hoyer": {
-        "passing_yds": 33.03,
-        "passing_td": 0.08,
-        "passing_int": 0.23,
-        "rushing_yds": 0,
-        "rushing_td": 0.01,
-        "receiving_rec": 0,
-        "receiving_yds": 0,
-        "receiving_td": 0,
-        "ret_td": 0,
-        "misc_fumtd": 0,
-        "misc_2pt": 0,
-        "fum_lost": 0,
-        "fantasy_points": 1.24
-    },
     "cj beathard": {
         "passing_yds": 21.3,
         "passing_td": 0.09,
@@ -5414,21 +5369,6 @@
         "fum_lost": 0,
         "fantasy_points": 0.96
     },
-    "trey ragas": {
-        "passing_yds": 0,
-        "passing_td": 0,
-        "passing_int": 0,
-        "rushing_yds": 1.89,
-        "rushing_td": 0.02,
-        "receiving_rec": 0.33,
-        "receiving_yds": 2.46,
-        "receiving_td": 0.01,
-        "ret_td": 0,
-        "misc_fumtd": 0,
-        "misc_2pt": 0,
-        "fum_lost": 0,
-        "fantasy_points": 0.95
-    },
     "luke farrell": {
         "passing_yds": 0,
         "passing_td": 0,
@@ -5668,21 +5608,6 @@
         "misc_2pt": 0,
         "fum_lost": 0,
         "fantasy_points": 0.8
-    },
-    "cj board": {
-        "passing_yds": 0,
-        "passing_td": 0,
-        "passing_int": 0,
-        "rushing_yds": 0.06,
-        "rushing_td": 0,
-        "receiving_rec": 0.21,
-        "receiving_yds": 4.46,
-        "receiving_td": 0.02,
-        "ret_td": 0,
-        "misc_fumtd": 0,
-        "misc_2pt": 0,
-        "fum_lost": 0,
-        "fantasy_points": 0.78
     },
     "dwayne washington": {
         "passing_yds": 0,
@@ -6194,7 +6119,7 @@
         "fum_lost": 0,
         "fantasy_points": 0.46
     },
-    "stanley morgan jr": {
+    "stanley morgan": {
         "passing_yds": 0,
         "passing_td": 0,
         "passing_int": 0,
@@ -6223,21 +6148,6 @@
         "misc_2pt": 0,
         "fum_lost": 0,
         "fantasy_points": 0.45
-    },
-    "sean mannion": {
-        "passing_yds": 6.91,
-        "passing_td": 0.06,
-        "passing_int": 0.08,
-        "rushing_yds": 0.08,
-        "rushing_td": 0.01,
-        "receiving_rec": 0,
-        "receiving_yds": 0,
-        "receiving_td": 0,
-        "ret_td": 0,
-        "misc_fumtd": 0,
-        "misc_2pt": 0.02,
-        "fum_lost": 0.01,
-        "fantasy_points": 0.44
     },
     "cullen gillaspia": {
         "passing_yds": 0,
@@ -6388,21 +6298,6 @@
         "misc_2pt": 0,
         "fum_lost": 0,
         "fantasy_points": 0.35
-    },
-    "antony auclair": {
-        "passing_yds": 0,
-        "passing_td": 0,
-        "passing_int": 0,
-        "rushing_yds": 0.03,
-        "rushing_td": 0,
-        "receiving_rec": 0.06,
-        "receiving_yds": 1.49,
-        "receiving_td": 0.02,
-        "ret_td": 0,
-        "misc_fumtd": 0,
-        "misc_2pt": 0,
-        "fum_lost": 0,
-        "fantasy_points": 0.33
     },
     "brandon zylstra": {
         "passing_yds": 0,
@@ -6614,7 +6509,7 @@
         "fum_lost": 0,
         "fantasy_points": 0.0
     },
-    "odell beckham jr": {
+    "odell beckham": {
         "passing_yds": 0,
         "passing_td": 0,
         "passing_int": 0,
@@ -6719,7 +6614,7 @@
         "fum_lost": 0,
         "fantasy_points": 0.0
     },
-    "lynn bowden jr": {
+    "lynn bowden": {
         "passing_yds": 0,
         "passing_td": 0,
         "passing_int": 0,
@@ -7379,6 +7274,21 @@
         "fum_lost": 0,
         "fantasy_points": 0.0
     },
+    "kendall hinton": {
+        "passing_yds": 0,
+        "passing_td": 0,
+        "passing_int": 0,
+        "rushing_yds": 0,
+        "rushing_td": 0,
+        "receiving_rec": 0,
+        "receiving_yds": 0,
+        "receiving_td": 0,
+        "ret_td": 0,
+        "misc_fumtd": 0,
+        "misc_2pt": 0,
+        "fum_lost": 0,
+        "fantasy_points": 0.0
+    },
     "khadarel hodge": {
         "passing_yds": 0,
         "passing_td": 0,
@@ -7424,21 +7334,6 @@
         "fum_lost": 0,
         "fantasy_points": 0.0
     },
-    "tommy hudson": {
-        "passing_yds": 0,
-        "passing_td": 0,
-        "passing_int": 0,
-        "rushing_yds": 0,
-        "rushing_td": 0,
-        "receiving_rec": 0,
-        "receiving_yds": 0,
-        "receiving_td": 0,
-        "ret_td": 0,
-        "misc_fumtd": 0,
-        "misc_2pt": 0,
-        "fum_lost": 0,
-        "fantasy_points": 0.0
-    },
     "jalen hurd": {
         "passing_yds": 0,
         "passing_td": 0,
@@ -7455,6 +7350,21 @@
         "fantasy_points": 0.0
     },
     "allen hurns": {
+        "passing_yds": 0,
+        "passing_td": 0,
+        "passing_int": 0,
+        "rushing_yds": 0,
+        "rushing_td": 0,
+        "receiving_rec": 0,
+        "receiving_yds": 0,
+        "receiving_td": 0,
+        "ret_td": 0,
+        "misc_fumtd": 0,
+        "misc_2pt": 0,
+        "fum_lost": 0,
+        "fantasy_points": 0.0
+    },
+    "trenton irwin": {
         "passing_yds": 0,
         "passing_td": 0,
         "passing_int": 0,
@@ -7529,7 +7439,7 @@
         "fum_lost": 0,
         "fantasy_points": 0.0
     },
-    "olabisi johnson": {
+    "bisi johnson": {
         "passing_yds": 0,
         "passing_td": 0,
         "passing_int": 0,
@@ -7649,7 +7559,7 @@
         "fum_lost": 0,
         "fantasy_points": 0.0
     },
-    "adrian killins jr": {
+    "adrian killins": {
         "passing_yds": 0,
         "passing_td": 0,
         "passing_int": 0,
@@ -7724,7 +7634,7 @@
         "fum_lost": 0,
         "fantasy_points": 0.0
     },
-    "anthony mcfarland jr": {
+    "anthony mcfarland": {
         "passing_yds": 0,
         "passing_td": 0,
         "passing_int": 0,
@@ -7784,7 +7694,7 @@
         "fum_lost": 0,
         "fantasy_points": 0.0
     },
-    "gardner minshew ii": {
+    "gardner minshew": {
         "passing_yds": 0,
         "passing_td": 0,
         "passing_int": 0,
@@ -8114,7 +8024,7 @@
         "fum_lost": 0,
         "fantasy_points": 0.0
     },
-    "larry rountree iii": {
+    "larry rountree": {
         "passing_yds": 0,
         "passing_td": 0,
         "passing_int": 0,
@@ -8219,7 +8129,7 @@
         "fum_lost": 0,
         "fantasy_points": 0.0
     },
-    "irv smith jr": {
+    "irv smith": {
         "passing_yds": 0,
         "passing_td": 0,
         "passing_int": 0,
@@ -8265,21 +8175,6 @@
         "fantasy_points": 0.0
     },
     "dylan soehner": {
-        "passing_yds": 0,
-        "passing_td": 0,
-        "passing_int": 0,
-        "rushing_yds": 0,
-        "rushing_td": 0,
-        "receiving_rec": 0,
-        "receiving_yds": 0,
-        "receiving_td": 0,
-        "ret_td": 0,
-        "misc_fumtd": 0,
-        "misc_2pt": 0,
-        "fum_lost": 0,
-        "fantasy_points": 0.0
-    },
-    "jeremy sprinkle": {
         "passing_yds": 0,
         "passing_td": 0,
         "passing_int": 0,
@@ -8633,15 +8528,6 @@
         "fg made_50+": 0,
         "fantasy_points": 7.7
     },
-    "michael badgley": {
-        "pat_made": 3.36,
-        "fg made_0-19": 0.09,
-        "fg made_20-29": 0.48,
-        "fg made_30-39": 0.5,
-        "fg made_40-49": 0.37,
-        "fg made_50+": 0,
-        "fantasy_points": 7.68
-    },
     "austin seibert": {
         "pat_made": 2.39,
         "fg made_0-19": 0.01,
@@ -8822,24 +8708,6 @@
         "fg made_50+": 0,
         "fantasy_points": 6.37
     },
-    "joey slye": {
-        "pat_made": 2.08,
-        "fg made_0-19": 0,
-        "fg made_20-29": 0.48,
-        "fg made_30-39": 0.52,
-        "fg made_40-49": 0.42,
-        "fg made_50+": 0,
-        "fantasy_points": 6.34
-    },
-    "nick folk": {
-        "pat_made": 2.17,
-        "fg made_0-19": 0.01,
-        "fg made_20-29": 0.48,
-        "fg made_30-39": 0.49,
-        "fg made_40-49": 0.39,
-        "fg made_50+": 0,
-        "fantasy_points": 6.28
-    },
     "dustin hopkins": {
         "pat_made": 1.68,
         "fg made_0-19": 0.04,
@@ -8894,16 +8762,16 @@
         "fg made_50+": 0,
         "fantasy_points": 5.56
     },
-    "ryan santoso": {
-        "pat_made": 1.47,
-        "fg made_0-19": 0,
-        "fg made_20-29": 0.48,
-        "fg made_30-39": 0.41,
-        "fg made_40-49": 0.42,
-        "fg made_50+": 0,
-        "fantasy_points": 5.4
-    },
     "matt ammendola": {
+        "pat_made": 0,
+        "fg made_0-19": 0,
+        "fg made_20-29": 0,
+        "fg made_30-39": 0,
+        "fg made_40-49": 0,
+        "fg made_50+": 0,
+        "fantasy_points": 0.0
+    },
+    "randy bullock": {
         "pat_made": 0,
         "fg made_0-19": 0,
         "fg made_20-29": 0,
@@ -8957,15 +8825,6 @@
         "fg made_50+": 0,
         "fantasy_points": 0.0
     },
-    "chris naggar": {
-        "pat_made": 0,
-        "fg made_0-19": 0,
-        "fg made_20-29": 0,
-        "fg made_30-39": 0,
-        "fg made_40-49": 0,
-        "fg made_50+": 0,
-        "fantasy_points": 0.0
-    },
     "quinn nordin": {
         "pat_made": 0,
         "fg made_0-19": 0,
@@ -8975,7 +8834,7 @@
         "fg made_50+": 0,
         "fantasy_points": 0.0
     },
-    "gnb": {
+    "green bay packers": {
         "tackles_sack": 2.83,
         "turnover_int": 1.26,
         "turnover_fum rec": 0.56,
@@ -8986,7 +8845,7 @@
         "points_pts allow": 24.11,
         "fantasy_points": 7.77
     },
-    "rai": {
+    "las vegas raiders": {
         "tackles_sack": 2.34,
         "turnover_int": 1.03,
         "turnover_fum rec": 0.68,
@@ -8997,7 +8856,7 @@
         "points_pts allow": 20.6,
         "fantasy_points": 7.16
     },
-    "nwe": {
+    "new england patriots": {
         "tackles_sack": 2.8,
         "turnover_int": 0.9,
         "turnover_fum rec": 0.62,
@@ -9008,7 +8867,7 @@
         "points_pts allow": 21.75,
         "fantasy_points": 7.14
     },
-    "sea": {
+    "seattle seahawks": {
         "tackles_sack": 2.62,
         "turnover_int": 0,
         "turnover_fum rec": 0.63,
@@ -9019,7 +8878,7 @@
         "points_pts allow": 22.7,
         "fantasy_points": 7.1
     },
-    "chi": {
+    "chicago bears": {
         "tackles_sack": 2.46,
         "turnover_int": 0.91,
         "turnover_fum rec": 0.7,
@@ -9030,7 +8889,7 @@
         "points_pts allow": 23.39,
         "fantasy_points": 7.06
     },
-    "car": {
+    "carolina panthers": {
         "tackles_sack": 2.53,
         "turnover_int": 0.95,
         "turnover_fum rec": 0.6,
@@ -9041,7 +8900,7 @@
         "points_pts allow": 17.66,
         "fantasy_points": 6.99
     },
-    "crd": {
+    "arizona cardinals": {
         "tackles_sack": 2.45,
         "turnover_int": 0.97,
         "turnover_fum rec": 0.66,
@@ -9052,7 +8911,7 @@
         "points_pts allow": 22.92,
         "fantasy_points": 6.97
     },
-    "clt": {
+    "indianapolis colts": {
         "tackles_sack": 2.51,
         "turnover_int": 0.93,
         "turnover_fum rec": 0.61,
@@ -9063,7 +8922,7 @@
         "points_pts allow": 20.51,
         "fantasy_points": 6.97
     },
-    "den": {
+    "denver broncos": {
         "tackles_sack": 2.61,
         "turnover_int": 0.95,
         "turnover_fum rec": 0.61,
@@ -9074,7 +8933,7 @@
         "points_pts allow": 22.95,
         "fantasy_points": 6.95
     },
-    "tam": {
+    "tampa bay buccaneers": {
         "tackles_sack": 2.41,
         "turnover_int": 1.04,
         "turnover_fum rec": 0.59,
@@ -9085,7 +8944,7 @@
         "points_pts allow": 18.42,
         "fantasy_points": 6.93
     },
-    "atl": {
+    "atlanta falcons": {
         "tackles_sack": 2.45,
         "turnover_int": 0.85,
         "turnover_fum rec": 0.69,
@@ -9096,7 +8955,7 @@
         "points_pts allow": 22.15,
         "fantasy_points": 6.87
     },
-    "mia": {
+    "miami dolphins": {
         "tackles_sack": 2.62,
         "turnover_int": 0.98,
         "turnover_fum rec": 0.51,
@@ -9107,7 +8966,7 @@
         "points_pts allow": 20.83,
         "fantasy_points": 6.8
     },
-    "phi": {
+    "philadelphia eagles": {
         "tackles_sack": 2.43,
         "turnover_int": 0.89,
         "turnover_fum rec": 0.64,
@@ -9118,7 +8977,7 @@
         "points_pts allow": 24.07,
         "fantasy_points": 6.69
     },
-    "jax": {
+    "jacksonville jaguars": {
         "tackles_sack": 2.48,
         "turnover_int": 0.85,
         "turnover_fum rec": 0.63,
@@ -9129,7 +8988,7 @@
         "points_pts allow": 0,
         "fantasy_points": 6.66
     },
-    "rav": {
+    "baltimore ravens": {
         "tackles_sack": 2.02,
         "turnover_int": 0.94,
         "turnover_fum rec": 0.7,
@@ -9140,7 +8999,7 @@
         "points_pts allow": 22.97,
         "fantasy_points": 6.66
     },
-    "pit": {
+    "pittsburgh steelers": {
         "tackles_sack": 2.35,
         "turnover_int": 0.94,
         "turnover_fum rec": 0.64,
@@ -9151,7 +9010,7 @@
         "points_pts allow": 22.53,
         "fantasy_points": 6.65
     },
-    "htx": {
+    "houston texans": {
         "tackles_sack": 2.47,
         "turnover_int": 0.82,
         "turnover_fum rec": 0.62,
@@ -9162,7 +9021,7 @@
         "points_pts allow": 21.45,
         "fantasy_points": 6.61
     },
-    "kan": {
+    "kansas city chiefs": {
         "tackles_sack": 2.36,
         "turnover_int": 0.86,
         "turnover_fum rec": 0.63,
@@ -9173,7 +9032,7 @@
         "points_pts allow": 22.03,
         "fantasy_points": 6.6
     },
-    "ram": {
+    "los angeles rams": {
         "tackles_sack": 2.48,
         "turnover_int": 0.86,
         "turnover_fum rec": 0.59,
@@ -9184,7 +9043,7 @@
         "points_pts allow": 19.8,
         "fantasy_points": 6.6
     },
-    "was": {
+    "washington football team": {
         "tackles_sack": 2.4,
         "turnover_int": 0.83,
         "turnover_fum rec": 0.6,
@@ -9195,7 +9054,7 @@
         "points_pts allow": 21.57,
         "fantasy_points": 6.54
     },
-    "nyg": {
+    "new york giants": {
         "tackles_sack": 2.27,
         "turnover_int": 0.82,
         "turnover_fum rec": 0.67,
@@ -9206,7 +9065,7 @@
         "points_pts allow": 21.23,
         "fantasy_points": 6.51
     },
-    "sfo": {
+    "san francisco 49ers": {
         "tackles_sack": 2.12,
         "turnover_int": 0.89,
         "turnover_fum rec": 0.67,
@@ -9217,7 +9076,7 @@
         "points_pts allow": 22.15,
         "fantasy_points": 6.5
     },
-    "cin": {
+    "cincinnati bengals": {
         "tackles_sack": 2.24,
         "turnover_int": 0.84,
         "turnover_fum rec": 0.64,
@@ -9228,7 +9087,7 @@
         "points_pts allow": 21.99,
         "fantasy_points": 6.5
     },
-    "oti": {
+    "tennessee titans": {
         "tackles_sack": 2.22,
         "turnover_int": 0.88,
         "turnover_fum rec": 0.63,
@@ -9239,7 +9098,7 @@
         "points_pts allow": 21.72,
         "fantasy_points": 6.5
     },
-    "min": {
+    "minnesota vikings": {
         "tackles_sack": 2.41,
         "turnover_int": 0.8,
         "turnover_fum rec": 0.58,
@@ -9250,7 +9109,7 @@
         "points_pts allow": 23.02,
         "fantasy_points": 6.31
     },
-    "sdg": {
+    "los angeles chargers": {
         "tackles_sack": 2.18,
         "turnover_int": 0.91,
         "turnover_fum rec": 0.54,
@@ -9261,7 +9120,7 @@
         "points_pts allow": 24.52,
         "fantasy_points": 6.28
     },
-    "nyj": {
+    "new york jets": {
         "tackles_sack": 2.6,
         "turnover_int": 0.68,
         "turnover_fum rec": 0.58,
@@ -9272,7 +9131,7 @@
         "points_pts allow": 25.96,
         "fantasy_points": 6.28
     },
-    "buf": {
+    "buffalo bills": {
         "tackles_sack": 1.67,
         "turnover_int": 0.93,
         "turnover_fum rec": 0.66,
@@ -9283,7 +9142,7 @@
         "points_pts allow": 22.96,
         "fantasy_points": 6.11
     },
-    "det": {
+    "detroit lions": {
         "tackles_sack": 2.39,
         "turnover_int": 0.63,
         "turnover_fum rec": 0.63,
@@ -9294,7 +9153,7 @@
         "points_pts allow": 24.09,
         "fantasy_points": 6.01
     },
-    "nor": {
+    "new orleans saints": {
         "tackles_sack": 2.16,
         "turnover_int": 0.75,
         "turnover_fum rec": 0.57,
@@ -9305,7 +9164,7 @@
         "points_pts allow": 19.76,
         "fantasy_points": 6.0
     },
-    "cle": {
+    "cleveland browns": {
         "tackles_sack": 1.94,
         "turnover_int": 0.75,
         "turnover_fum rec": 0.6,
@@ -9316,7 +9175,7 @@
         "points_pts allow": 23.63,
         "fantasy_points": 5.7
     },
-    "dal": {
+    "dallas cowboys": {
         "tackles_sack": 1.77,
         "turnover_int": 0.75,
         "turnover_fum rec": 0.6,
