--- a/static/projections/projections.json
+++ b/static/projections/projections.json
@@ -329,7 +329,7 @@
     "noah fant": {
         "wk1": 9.24
     },
-    "laviska shenault jr": {
+    "laviska shenault": {
         "wk1": 9.38
     },
     "damien harris": {
@@ -344,7 +344,7 @@
     "jared cook": {
         "wk1": 8.96
     },
-    "michael pittman jr": {
+    "michael pittman": {
         "wk1": 9.01
     },
     "desean jackson": {
@@ -416,7 +416,7 @@
     "marquez valdes-scantling": {
         "wk1": 8.11
     },
-    "ronald jones ii": {
+    "ronald jones": {
         "wk1": 8.63
     },
     "elijah moore": {
@@ -488,7 +488,7 @@
     "denzel mims": {
         "wk1": 6.38
     },
-    "henry ruggs iii": {
+    "henry ruggs": {
         "wk1": 6.59
     },
     "rashard higgins": {
@@ -497,7 +497,7 @@
     "james white": {
         "wk1": 6.31
     },
-    "terrace marshall jr": {
+    "terrace marshall": {
         "wk1": 6.3
     },
     "dawson knox": {
@@ -773,7 +773,7 @@
     "boston scott": {
         "wk1": 2.85
     },
-    "benny snell jr": {
+    "benny snell": {
         "wk1": 3.14
     },
     "malcolm brown": {
@@ -854,9 +854,6 @@
     "cj ham": {
         "wk1": 1.79
     },
-    "damarea crockett": {
-        "wk1": 2.07
-    },
     "kenneth gainwell": {
         "wk1": 1.96
     },
@@ -910,9 +907,6 @@
     },
     "trent sherfield": {
         "wk1": 1.62
-    },
-    "ameer abdullah": {
-        "wk1": 1.75
     },
     "harrison bryant": {
         "wk1": 1.62
@@ -1025,9 +1019,6 @@
     "justin fields": {
         "wk1": 1.24
     },
-    "brian hoyer": {
-        "wk1": 1.24
-    },
     "cj beathard": {
         "wk1": 1.23
     },
@@ -1082,9 +1073,6 @@
     "trevon wesco": {
         "wk1": 0.78
     },
-    "trey ragas": {
-        "wk1": 0.78
-    },
     "luke farrell": {
         "wk1": 0.75
     },
@@ -1132,9 +1120,6 @@
     },
     "jonathan ward": {
         "wk1": 0.62
-    },
-    "cj board": {
-        "wk1": 0.68
     },
     "dwayne washington": {
         "wk1": 0.64
@@ -1238,14 +1223,11 @@
     "reggie gilliam": {
         "wk1": 0.4
     },
-    "stanley morgan jr": {
+    "stanley morgan": {
         "wk1": 0.4
     },
     "khari blasingame": {
         "wk1": 0.35
-    },
-    "sean mannion": {
-        "wk1": 0.44
     },
     "cullen gillaspia": {
         "wk1": 0.34
@@ -1276,9 +1258,6 @@
     },
     "kj osborn": {
         "wk1": 0.35
-    },
-    "antony auclair": {
-        "wk1": 0.3
     },
     "brandon zylstra": {
         "wk1": 0.33
@@ -1322,7 +1301,7 @@
     "ryan becker": {
         "wk1": 0.0
     },
-    "odell beckham jr": {
+    "odell beckham": {
         "wk1": 0.0
     },
     "chad beebe": {
@@ -1343,7 +1322,7 @@
     "mike boone": {
         "wk1": 0.0
     },
-    "lynn bowden jr": {
+    "lynn bowden": {
         "wk1": 0.0
     },
     "nick bowers": {
@@ -1475,6 +1454,9 @@
     "ty hilton": {
         "wk1": 0.0
     },
+    "kendall hinton": {
+        "wk1": 0.0
+    },
     "khadarel hodge": {
         "wk1": 0.0
     },
@@ -1484,13 +1466,13 @@
     "jesper horsted": {
         "wk1": 0.0
     },
-    "tommy hudson": {
-        "wk1": 0.0
-    },
     "jalen hurd": {
         "wk1": 0.0
     },
     "allen hurns": {
+        "wk1": 0.0
+    },
+    "trenton irwin": {
         "wk1": 0.0
     },
     "tyree jackson": {
@@ -1505,7 +1487,7 @@
     "rysen john": {
         "wk1": 0.0
     },
-    "olabisi johnson": {
+    "bisi johnson": {
         "wk1": 0.0
     },
     "collin johnson": {
@@ -1529,7 +1511,7 @@
     "tom kennedy": {
         "wk1": 0.0
     },
-    "adrian killins jr": {
+    "adrian killins": {
         "wk1": 0.0
     },
     "jake luton": {
@@ -1544,7 +1526,7 @@
     "nate mccrary": {
         "wk1": 0.0
     },
-    "anthony mcfarland jr": {
+    "anthony mcfarland": {
         "wk1": 0.0
     },
     "sean mckeon": {
@@ -1556,7 +1538,7 @@
     "anthony miller": {
         "wk1": 0.0
     },
-    "gardner minshew ii": {
+    "gardner minshew": {
         "wk1": 0.0
     },
     "eli mitchell": {
@@ -1643,7 +1625,7 @@
     "ben skowronek": {
         "wk1": 0.0
     },
-    "irv smith jr": {
+    "irv smith": {
         "wk1": 0.0
     },
     "shi smith": {
@@ -1653,9 +1635,6 @@
         "wk1": 0.0
     },
     "dylan soehner": {
-        "wk1": 0.0
-    },
-    "jeremy sprinkle": {
         "wk1": 0.0
     },
     "nate stanley": {
@@ -1727,9 +1706,6 @@
     "ryan succop": {
         "wk1": 7.7
     },
-    "michael badgley": {
-        "wk1": 7.68
-    },
     "austin seibert": {
         "wk1": 7.61
     },
@@ -1790,12 +1766,6 @@
     "graham gano": {
         "wk1": 6.37
     },
-    "joey slye": {
-        "wk1": 6.34
-    },
-    "nick folk": {
-        "wk1": 6.28
-    },
     "dustin hopkins": {
         "wk1": 6.09
     },
@@ -1814,11 +1784,11 @@
     "jake elliott": {
         "wk1": 5.56
     },
-    "ryan santoso": {
-        "wk1": 5.4
-    },
     "matt ammendola": {
         "wk1": 5.4
+    },
+    "randy bullock": {
+        "wk1": 0
     },
     "kaimi fairbairn": {
         "wk1": 0
@@ -1835,106 +1805,103 @@
     "tucker mccann": {
         "wk1": 0
     },
-    "chris naggar": {
-        "wk1": 0
-    },
     "quinn nordin": {
         "wk1": 0
     },
-    "gnb": {
+    "green bay packers": {
         "wk1": 7.77
     },
-    "rai": {
+    "las vegas raiders": {
         "wk1": 7.16
     },
-    "nwe": {
+    "new england patriots": {
         "wk1": 7.14
     },
-    "sea": {
+    "seattle seahawks": {
         "wk1": 7.1
     },
-    "chi": {
+    "chicago bears": {
         "wk1": 7.06
     },
-    "car": {
+    "carolina panthers": {
         "wk1": 6.99
     },
-    "crd": {
+    "arizona cardinals": {
         "wk1": 6.97
     },
-    "clt": {
+    "indianapolis colts": {
         "wk1": 6.97
     },
-    "den": {
+    "denver broncos": {
         "wk1": 6.95
     },
-    "tam": {
+    "tampa bay buccaneers": {
         "wk1": 6.93
     },
-    "atl": {
+    "atlanta falcons": {
         "wk1": 6.87
     },
-    "mia": {
+    "miami dolphins": {
         "wk1": 6.8
     },
-    "phi": {
+    "philadelphia eagles": {
         "wk1": 6.69
     },
-    "jax": {
+    "jacksonville jaguars": {
         "wk1": 6.66
     },
-    "rav": {
+    "baltimore ravens": {
         "wk1": 6.66
     },
-    "pit": {
+    "pittsburgh steelers": {
         "wk1": 6.65
     },
-    "htx": {
+    "houston texans": {
         "wk1": 6.61
     },
-    "kan": {
+    "kansas city chiefs": {
         "wk1": 6.6
     },
-    "ram": {
+    "los angeles rams": {
         "wk1": 6.6
     },
-    "was": {
+    "washington football team": {
         "wk1": 6.54
     },
-    "nyg": {
+    "new york giants": {
         "wk1": 6.51
     },
-    "sfo": {
+    "san francisco 49ers": {
         "wk1": 6.5
     },
-    "cin": {
+    "cincinnati bengals": {
         "wk1": 6.5
     },
-    "oti": {
+    "tennessee titans": {
         "wk1": 6.5
     },
-    "min": {
+    "minnesota vikings": {
         "wk1": 6.31
     },
-    "sdg": {
+    "los angeles chargers": {
         "wk1": 6.28
     },
-    "nyj": {
+    "new york jets": {
         "wk1": 6.28
     },
-    "buf": {
+    "buffalo bills": {
         "wk1": 6.11
     },
-    "det": {
+    "detroit lions": {
         "wk1": 6.01
     },
-    "nor": {
+    "new orleans saints": {
         "wk1": 6.0
     },
-    "cle": {
+    "cleveland browns": {
         "wk1": 5.7
     },
-    "dal": {
+    "dallas cowboys": {
         "wk1": 5.59
     }
 }
